added follower list
